--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,1 +1,15 @@
-{}
+{
+	"hosting": {
+		"S3AndCloudFront": {
+			"service": "S3AndCloudFront",
+			"providerPlugin": "awscloudformation"
+		}
+	},
+	"auth": {
+		"stemhiveee64373b": {
+			"service": "Cognito",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": []
+		}
+	}
+}
