--- a/amplify/backend/auth/awesomeness2a023505/awesomeness2a023505-cloudformation-template.yml
+++ b/amplify/backend/auth/awesomeness2a023505/awesomeness2a023505-cloudformation-template.yml
@@ -82,16 +82,7 @@ Parameters:
                                       
   useDefault:
     Type: String
-              
-  triggers:
-    Type: String
-                    
-  parentStack:
-    Type: String
-                
-  permissions:
-    Type: CommaDelimitedList
-              
+                      
   dependsOn:
     Type: CommaDelimitedList
     
@@ -106,7 +97,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'stemhiee64373b_sns-role', !Join ['',['stemhiee64373b_sns-role', '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'awesom2a023505_sns-role', !Join ['',['awesom2a023505_sns-role', '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -118,10 +109,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: stemhiee64373b_role_external_id
+                sts:ExternalId: awesom2a023505_role_external_id
       Policies: 
         - 
-          PolicyName: stemhiee64373b-sns-policy
+          PolicyName: awesom2a023505-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -167,26 +158,15 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: stemhiee64373b_role_external_id
+        ExternalId: awesom2a023505_role_external_id
     
-  
-    
-    
-  
-    
-    
-  
-   
-    
-  # Updating lambda role with permissions to Cognito
-  
   
   UserPoolClientWeb:
   # Created provide application access to user pool
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: stemhiee64373b_app_clientWeb
+      ClientName: awesom2a023505_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -196,7 +176,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: stemhiee64373b_app_client
+      ClientName: awesom2a023505_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -261,7 +241,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: stemhiee64373b_userpoolclient_lambda_iam_policy
+      PolicyName: awesom2a023505_userpoolclient_lambda_iam_policy
       Roles: 
         - !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',[!Ref userpoolClientLambdaRole, '-', !Ref env]]]
       PolicyDocument:
@@ -278,7 +258,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: stemhiee64373b_userpoolclient_lambda_log_policy
+      PolicyName: awesom2a023505_userpoolclient_lambda_log_policy
       Roles: 
         - !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',[!Ref userpoolClientLambdaRole, '-', !Ref env]]]
       PolicyDocument:
@@ -318,7 +298,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'stemhiveee64373b_identitypool_ee64373b', !Join ['',['stemhiveee64373b_identitypool_ee64373b', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'awesomeness2a023505_identitypool_2a023505', !Join ['',['awesomeness2a023505_identitypool_2a023505', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
