--- a/amplify/backend/auth/awesomeness2a023505/awesomeness2a023505-cloudformation-template.yml
+++ b/amplify/backend/auth/awesomeness2a023505/awesomeness2a023505-cloudformation-template.yml
@@ -9,6 +9,18 @@ Parameters:
     Type: String
   
   
+  
+  
+  functionawesomeness2a023505PostConfirmationArn: 
+    Type: String
+    Default: functionawesomeness2a023505PostConfirmationArn
+  
+  functionawesomeness2a023505PostConfirmationName: 
+    Type: String
+    Default: functionawesomeness2a023505PostConfirmationName
+  
+  
+  
 
     
   identityPoolName:
@@ -85,7 +97,22 @@ Parameters:
                       
   dependsOn:
     Type: CommaDelimitedList
-    
+      
+  triggers:
+    Type: String
+                
+  hostedUI:
+    Type: String
+                  
+  parentStack:
+    Type: String
+                
+  permissions:
+    Type: CommaDelimitedList
+        
+  thirdPartyAuth:
+    Type: String
+          
 Conditions:
   ShouldNotCreateEnvResources: !Equals [ !Ref env, NONE ]
 
@@ -139,6 +166,18 @@ Resources:
         
       
       
+      LambdaConfig:
+        
+        
+        
+        
+        
+          PostConfirmation: !Ref functionawesomeness2a023505PostConfirmationArn
+        
+        
+        
+        
+      
       
       AutoVerifiedAttributes: !Ref autoVerifiedAttributes
       
@@ -160,6 +199,58 @@ Resources:
         SnsCallerArn: !GetAtt SNSRole.Arn
         ExternalId: awesom2a023505_role_external_id
     
+  
+    
+    
+  
+    
+  
+  UserPoolPostConfirmationLambdaInvokePermission: 
+    Type: "AWS::Lambda::Permission"
+    DependsOn: UserPool
+    Properties: 
+      Action: "lambda:invokeFunction"
+      Principal: "cognito-idp.amazonaws.com"
+      FunctionName: !Ref functionawesomeness2a023505PostConfirmationName
+      SourceArn: !GetAtt UserPool.Arn
+    
+  
+   
+    
+  # Updating lambda role with permissions to Cognito
+  
+  
+  awesomeness2a023505PostConfirmationAddToGroupCognito:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: awesomeness2a023505PostConfirmationAddToGroupCognito
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Action:
+            
+              - cognito-idp:AdminAddUserToGroup
+            
+              - cognito-idp:GetGroup
+            
+              - cognito-idp:CreateGroup
+            
+            
+            
+            Resource: !GetAtt
+            
+              - UserPool
+            
+              - Arn
+            
+            
+            
+
+      Roles:
+        - !Join ['',["awesomeness2a023505PostConfirmation", '-', !Ref env]]
+  
+  
   
   UserPoolClientWeb:
   # Created provide application access to user pool
