--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "aws-amplify": "^1.1.36",
     "aws-amplify-react": "^2.3.12",
+    "bootstrap": "^4.3.1",
     "react": "^16.9.0",
-    "react-bootstrap": "^1.0.0-beta.11",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-mailchimp-subscribe": "^2.1.0",
     "react-router-dom": "^5.0.1",
