--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-mailchimp-subscribe": "^2.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "react-social-icons": "^4.1.0"
+    "react-social-icons": "^4.1.0",
+    "tsc": "^1.20150623.0"
   },
   "scripts": {
     "start": "react-scripts start",
