--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "aws-amplify": "^1.1.36",
     "aws-amplify-react": "^2.3.12",
     "bootstrap": "^4.3.1",
+    "firebase": "^7.2.2",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-mailchimp-subscribe": "^2.1.0",
+    "react-redux": "^7.1.1",
+    "react-redux-firebase": "^3.0.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-social-icons": "^4.1.0",
+    "redux": "^4.0.4",
+    "redux-firestore": "^0.9.0",
+    "redux-thunk": "^2.3.0",
     "tsc": "^1.20150623.0"
   },
   "scripts": {
