--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "aws-amplify": "^1.1.36",
     "aws-amplify-react": "^2.3.12",
     "bootstrap": "^4.3.1",
+    "firebase": "^7.2.2",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
